objects/ContractRegionalApprover__c.object
<CustomObject>
    <description>holds names for contract approvers by region and role</description>
    <fields>
        <fullName>Contract_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Contract Specialist</relationshipLabel>
        <relationshipName>Contract_Specialist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Librarian__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Librarian</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Contract Librarian</relationshipLabel>
        <relationshipName>Contract_Librarian</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Director_DIST__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Director DIST</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Contract Regional Approvers (Sales Director DIST)</relationshipLabel>
        <relationshipName>Contract_SD_DIST</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Director_OEM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Director OEM</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Contract Regional Approvers (Sales Director OEM)</relationshipLabel>
        <relationshipName>Contract_SD_OEM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Contract Regional Approvers (Sales Executive)</relationshipLabel>
        <relationshipName>Contract_Sales_Executive</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_VP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales VP</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Contract Regional Approvers (Sales VP)</relationshipLabel>
        <relationshipName>Contract_SalesVP</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Regional Approver</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Director_DIST__c</columns>
        <columns>Sales_Director_OEM__c</columns>
        <columns>Sales_VP__c</columns>
        <columns>Sales_Executive__c</columns>
        <columns>Contract_Specialist__c</columns>
        <columns>Librarian__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Region</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Regional Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>